--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div>
   </div>
 
-    <div class="ml-56 mr-56 mt-4 -mb-3 not-prose relative bg-blue-50 rounded-xl overflow-hidden dark:bg-slate-800/25">
-      <div class="relative rounded-xl overflow-auto shadow-sm overflow-hidden my-8">
+    <div class="ml-4 mr-4 mt-4 -mb-3 not-prose relative bg-blue-50 rounded-xl dark:bg-slate-800/25 md:flex-col lg:flex-row">
+      <div class="relative rounded-xl overflow-auto shadow-sm  my-8">
           <table id="flight-table" class="border-collapse table-auto w-64 text-sm">
             <tr>
               <th class="border-b dark:border-blue-600 font-medium p-4 pl-8 pt-0 pb-3 text-blue-400 dark:text-blue-200 text-left">Flight Number</th>
@@ -34,14 +34,11 @@
     </div>
   </div>
 
-   <div class="map-container">
+   <div class="ml-4 mr-4 md:flex-col lg:flex-row">
     <div id="map">
-
     </div>
    </div>
-       
-    
-   
+
 </body>
 </html>
 
