tailwind instalation with cdn

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="ml-4 mr-4 mt-4 -mb-3 not-prose relative bg-blue-50 rounded-xl dark:bg-slate-800/25 md:flex-col lg:flex-row">
       <div class="relative rounded-xl overflow-auto shadow-sm  my-8">
-          <table id="flight-table" class="border-collapse table-auto w-64 text-sm">
+          <table id="flight-table" class="border-collapse table-auto w-full text-sm">
             <tr>
               <th class="border-b dark:border-blue-600 font-medium p-4 pl-8 pt-0 pb-3 text-blue-400 dark:text-blue-200 text-left">Flight Number</th>
               <th class="border-b dark:border-blue-600 font-medium p-4 pt-0 pb-3 text-blue-400 dark:text-blue-200 text-left">Country</th>
@@ -35,7 +35,7 @@
   </div>
 
    <div class="ml-4 mr-4 md:flex-col lg:flex-row">
-    <div id="map">
+    <div id="map" class="rounded-xl w-full h-80">
     </div>
    </div>
 
