--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
-     <script src="https://cdn.tailwindcss.com"></script>
+     <link href="./dist/output.css" rel="stylesheet">
 
     <title>Space Flights</title>
 </head>
